opam-version: "2.0"
name: "Bash_mini"
version: "0.0.1"
synopsis: """ mini Bash """
#description: """ """
maintainer: "st076963@student.spbu.ru"
#authors: "Pelogeiko Makar <m.pelogeiko@gmail.com>"
license: "LGPLv3"
homepage: "not specified"
#doc: "https://ocaml-ppx.github.io/ppxlib/"
bug-reports: "not specified"
depends: [
  "ocaml" {>= "4.04.1"}
  #"base"
  "ppx_expect"
  "dune"
  "opal"
  "ocamlformat" { build }
  "ppx_show"
  "ppx_deriving"
]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
