opam-version: "2.0"
name: "Java"
version: "0.0.1"
synopsis: """ Java-OOP """
#description: """ """
maintainer: "opensource@janestreet.com"
#authors: "Bozhnyuk Alexander <bozhnyuks@mail.ru>"
license: "LGPLv3"
homepage: "not specified"
#doc: "https://ocaml-ppx.github.io/ppxlib/"
bug-reports: "not specified"
depends: [
  "ocaml" {>= "4.04.1"}
  #"base"
  "ppx_expect"
  "dune" #{>= "2.7"}
  "ocamlformat" { build }
  "opal"
  "ppx_deriving"
  "ppx_show"
]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
