(executable
 (name REPL)
 (public_name Java.Repl)
 (modules REPL)
 (libraries Java.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(cram
 (deps demos/demoParserFirst.exe demos/demoParserSecond.exe
   demos/demoClassLoader.exe demos/demoInterpreter.exe
   demos/demoPrettyPrinter.exe))
