(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name parserTest)
 (modules parserTest)
 (libraries CSharpMini.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name parserVisitorPatternTest)
 (modules parserVisitorPatternTest)
 (libraries CSharpMini.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name classLoaderTest)
 (modules classLoaderTest)
 (libraries CSharpMini.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name interpretationTest)
 (modules interpretationTest)
 (libraries CSharpMini.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))
