(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(library
 (name csharpmini_lib)
 (public_name CSharpMini.Lib)
 (modules Ast Parser Interpreter Pretty_printer REPL_printer REPL_stdlib
   Operators Helpers Hashtbl_impr Tests)
 (libraries opal ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_show ppx_deriving.eq)))
