(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(library
 (name csharp_lib)
 (public_name CsharpExcep.Lib)
 (modules Ast Parser Tests Interpreter Hashtbl_der Operators Extractors
   Standlib REPL_printing)
 (libraries opal ppx_show.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_show ppx_deriving.eq)))
